# engular

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  karma-js.conf.js  renovate.json
adev/src/: main.server.ts  main.ts
tools/: BUILD.bazel  defaults.bzl  ng_benchmark.bzl  postinstall-patches.js  tsconfig.json  types.d.ts
tools/circular_dependency_test/: index.bzl  madge-resolve.config.js
tools/contributing-stats/: get-data.ts
tools/esm-interop/: esm-extension-loader.mjs  esm-main-loader.mjs  esm-node-module-loader.mjs
tools/gulp-tasks/: changelog-zonejs.js
tools/legacy-saucelabs/: build-saucelabs-test-bundle.mjs  jit_transform_bundle_main.ts  pre-setup.ts  test-init.ts
tools/manual_api_docs/: generate_block_api_json.bzl  generate_block_api_json.ts  generate_element_api_json.bzl  generate_element_api_json.ts
tools/manual_api_docs/blocks/: for.md
tools/manual_api_docs/elements/: ng-content.md  ng-template.md
tools/saucelabs/: sauce-service.sh
tools/saucelabs-daemon/: README.md  browser.ts  ipc-defaults.ts  ipc-messages.ts
tools/saucelabs-daemon/background-service/: cli.ts  ipc.ts  sauce-connect-tunnel.ts  saucelabs-daemon.ts
tools/saucelabs-daemon/launcher/: index.ts  launcher.ts
tools/symbol-extractor/: cli.ts  index.bzl  run_all_symbols_extractor_tests.js  symbol_extractor.ts  symbol_extractor_spec.ts
tools/testing/: BUILD.bazel  README.md  browser_tests.init.ts  fail.spec.js  node_no_angular_tests.init.ts  node_tests.init.ts  zone_base_setup.ts
tools/tslint/: requireInternalWithUnderscoreRule.ts  tsNodeLoaderRule.js
(+205 files in other folders)
